# datawash-inspector

./: LICENSE  MANIFEST.in  README.md  generate_dummy.py  pyproject.toml  requirements.txt  setup.py  test_dashboard.py
datawash/: __init__.py  autoprep.py  cleaner.py  eda_engine.py  plot_factory.py  stats_engine.py
