[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "datawash-inspector"
version = "0.4.1"
authors = [
  { name="kishown", email="kishown@example.com" },
]
description = "An automated end-to-end data cleaning, preprocessing, and EDA pipeline."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.20.0",
    "scikit-learn>=1.0.0",
    "scipy>=1.7.0",
    "plotly>=5.0.0"
]

[project.urls]
"Homepage" = "https://github.com/Kishown-e22194/datawash"

[tool.setuptools.packages.find]
where = ["."]
include = ["datawash*"]
exclude = ["tests*", "docs*"]
